--- a/src/App.css
+++ b/src/App.css
@@ -472,5 +472,7 @@ color:var(--white)
   background: transparent;
   font-size: 28px;
   border: 0;
+  position: absolute;
+  right: 20px;
   padding: 20px;
 }
