--- a/src/App.css
+++ b/src/App.css
@@ -472,7 +472,7 @@ color:var(--white)
   background: transparent;
   font-size: 28px;
   border: 0;
-  position: absolute;
-  right: 20px;
+  position: fixed;
+  right: 10px;
   padding: 20px;
 }
